Fix high contrast mode

--- a/src/res/styles/styles.css
+++ b/src/res/styles/styles.css
@@ -1,6 +1,6 @@
 /* Tasks list */
 .separator {
-    background: linear-gradient(to bottom, @headerbar_shade_color, transparent);
+    background: linear-gradient(to bottom, @borders, transparent);
 }
 
 /* Task */
